--- a/mission-to-mars/templates/index.html
+++ b/mission-to-mars/templates/index.html
@@ -124,7 +124,17 @@
 
 
 
+<!-- Example of for loop through python VARIABlE
 
+{% for item in inventory %}
+
+pass theses in the the HTML elements
+{{ item.type }}
+
+{{ item.cost }}
+
+
+{% endfor %)} -->
 
 
 
