--- a/mission-to-mars/templates/index.html
+++ b/mission-to-mars/templates/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="UTF-8">
-  <title>Dashboard</title>
+  <title>Mars Data</title>
   
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
@@ -23,7 +23,7 @@
       <div class="jumbotron">
       <h1>Mission to Mars</h1>
       <br>
-      <button type="button" class="btn btn-primary">Scrape for New Data!</button>
+      <button type="button" class="btn btn-primary" href="/scrape">Scrape for New Data!</button>
       </div>
     
     </div>
@@ -31,7 +31,7 @@
     <div class="container">
       
       <h5>Latest Mars News</h5>
-      <h6>Headline of article goes here</h6>
+      <h6>{{ info.news_title }}</h6>
       <p>The contents of the artile go Here. I am copying this here for an example. "Preparation of Nasa's nex spaccraft to 
           Mars, InSigh has ramped p this summer, on course for launch next may from Vandenberg Airforce Base. 
       </p>
@@ -122,24 +122,7 @@
         
       </div>
 
+    </body>
 
+</html>
 
-<!-- Example of for loop through python VARIABlE
-
-{% for item in inventory %}
-
-pass theses in the the HTML elements
-{{ item.type }}
-
-{{ item.cost }}
-
-
-{% endfor %)} -->
-
-
-
-
-
-
-
-</body>
